Added multiple keywords and changed the icon also

--- a/react-speech-app/index.html
+++ b/react-speech-app/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,10 +7,10 @@
   <!-- meta tags -->
     <title>Speaking Assistant - AI Voice Generator</title>
     <meta name="description" content="Convert text into realistic AI-generated speech with Speaking Assistant. Try our advanced Text-to-Speech technology now!" />
-    <meta name="keywords" content="text to speech, AI voice, speaking assistant, TTS, voice generator, AI assistant" />
+    <meta name="keywords" content="text to speech, AI voice, speaking assistant, TTS, voice generator, AI assistant, speech synthesis, multiple voices, realtime speed control, word highlighting" />
     <meta name="robots" content="index, follow" />
   
-    <link rel="icon" type="image/png" href="/assets/react.svg" />
+    <link rel="icon" type="image/png" href="./public/icons/icon-144x144.png" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="preload" as="script" href="/src/main.jsx" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -25,7 +25,6 @@
     <meta name="twitter:title" content="Speaking Assistant - AI Voice Generator" />
     <meta name="twitter:description" content="Convert text into realistic AI-generated speech with Speaking Assistant." />
  
-
     <!-- Web App Manifest -->
     <link rel="manifest" href="/manifest.json" />
 
@@ -35,7 +34,7 @@
         "@context": "https://schema.org",
         "@type": "WebApplication",
         "name": "Speaking Assistant",
-        "description": "Convert text into realistic AI-generated speech with our advanced text-to-speech technology.",
+        "description": "Convert text into realistic AI-generated speech with our advanced text-to-speech technology. Features include speech synthesis, multiple voices, real-time speed control, and word highlighting."
       }
     </script>
   </head>
