--- a/react-speech-app/index.html
+++ b/react-speech-app/index.html
@@ -15,7 +15,8 @@
     <link rel="preload" as="script" href="/src/main.jsx" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://cdn.jsdelivr.net" />
-    
+
+    <meta name="google-site-verification" content="SFSlSHavyaM3WjmgEnr3GbO8AVB_Xc9ezAoqPg8nPzc" />
    <!-- open graphs -->
     <meta property="og:title" content="Speaking Assistant - AI Voice Generator" />
     <meta property="og:description" content="Convert text into realistic AI-generated speech with Speaking Assistant." />
